# Projects

./: README
Assignment#2/: Assignment#2.csproj  Assignment#2.sln  Form1.Designer.cs  Form1.cs  Program.cs
Auto-Maintenance_Education_App/: .gitignore  PageEnum.h  QtPiEducationalApp.pro  QuizUtilities.cpp  QuizUtilities.h  README.md  a0442a-red-blem-windshield-washer-fluid-reservoir-cap-s550-ford-mustang-bronco-blemish-4560.html  fluidreplacementinfoform.cpp  fluidreplacementinfoform.h  fluidreplacementinfoform.ui  fluidreplacementquizform.cpp  fluidreplacementquizform.h  fluidreplacementquizform.ui  jumpstartinfoform.cpp  jumpstartinfoform.h  jumpstartinfoform.ui  jumpstartquizform.cpp  jumpstartquizform.h  jumpstartquizform.ui  main.cpp  mainwindow.cpp  (+38 more)
ChatApp/: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
ChatApp/backend/: auth.py  dependencies.py  exceptions.py  main.py
ChatApp/backend/__tests__/: conftest.py  main_test.py
ChatApp/backend/__tests__/routers/: AS3_test.py  AS4_test.py  account_test.py  chats_test.py
ChatApp/backend/database/: account.py  schema.py
ChatApp/backend/models/: auth.py  exceptions.py
ChatApp/backend/routers/: account.py  authentication.py  chat.py
ChatApp/frontend/: README.md  index.html  package-lock.json  package.json
ChatApp/frontend/src/: App.jsx  api.jsx  hooks.js
ChatApp/frontend/src/components/: Form.jsx  FormButton.jsx  FormInput.jsx
ChatApp/frontend/src/pages/: Home.jsx  Login.jsx  Register.jsx  Settings.jsx  chats.jsx
ChatApp/frontend/src/providers/: AuthProvider.jsx
(+84 files in other folders)
